--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.8.jar" sourcepath="lib-source/commons-lang3-3.8-sources.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/common/commons-lang3-3.8.jar"/>
+	<classpathentry kind="lib" path="lib/common/fastjson-1.2.49.jar"/>
+	<classpathentry kind="lib" path="lib/common/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-http-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-io-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-server-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-servlet-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-util-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/log/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/log/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/log/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
